deployments/service-c/service-c-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-deployment
  namespace: istio-meshlab
  labels:
    app: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
        - name: service-c
          image: quarkus-istio-service:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
