deployments/service-c/service-c-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: istio-meshlab
  labels:
    app: service-c
spec:
  selector:
    app: service-c
  ports:
    - name: http
      port: 80
      targetPort: 8080
