deployments/service-c/service-c-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-c-gateway
  namespace: istio-meshlab
  labels:
    app: service-c
spec:
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: service-c-tls
      hosts:
        - "service-c.local"
